# spiro

./: README.md  spiros.cabal
app/: Main.hs  Spiros.hs
ratingapp/: main.py
src/: Survey.hs
