name:                spiros
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spiros#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Survey
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , text
                     , random
                     , ghcid
                     , diagrams
                     , diagrams-svg
                     , diagrams-lib
                     , diagrams-contrib
  default-language:    Haskell2010

executable spiros-exe
  hs-source-dirs:      app
  main-is:             Spiros.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spiros
                     , directory
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-contrib
                     , random
                     , SVGFonts
                     , aeson
                     , text
                     , bytestring
                     , uuid
  default-language:    Haskell2010

test-suite spiros-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spiros
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/spiros
